--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,18 +1,25 @@
 @import './mixins';
 @import './vendors';
+@import './components';
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    // scroll-behavior: smooth;
 }
 
 body {
     background-color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
     overflow: hidden;
+    scroll-behavior: smooth;
     
     * {font-weight: normal;}
+}
+
+a {
+    color: #6e81e2;
 }
 
 #selectDir {
@@ -58,15 +65,21 @@ body {
     flex-direction: row;
     width: 100%;
     overflow: hidden;
+    scroll-behavior: smooth;
     
     .suggestion {
         margin: 50px 15px;
+        height: fit-content;
         background-color: white;
         box-shadow: 0px 0px 7px 3px #0000002e;
         border-radius: 12px;
         
         &:first-child {
-            margin-left: 30vw;
+            margin-left: 34vw;
+        }
+        
+        &:last-child {
+            margin-right: 34vw;
         }
         
         &--selected {
@@ -95,10 +108,13 @@ body {
             margin: 50px auto !important;
             width: 30vw;
             height: 200px;
+            padding: 2rem;
             color: #412661;
+            text-align: center;
             
             h2 {
                 margin: 0;
+                margin-bottom: .5rem;
             }
         }
     }
@@ -106,16 +122,89 @@ body {
 
 #step1 {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 5rem;
     height: 100vh;
     color: white;
     background-color: #412661;
+    
+    #toStep2 {
+        margin-top: 2rem;
+    }
+    
+    .section-head {
+        margin-bottom: 0;
+    }
 }
 
 #step2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: 100vh;
+    // scroll-margin-top: 50vh;
+    
+    .section-head__title {
+        color: #6e81e2;
+    }
+    
+    #suggestionCounter {
+        margin-bottom: 1rem;
+        @include text-modern;
+        font-size: 80%;
+        font-weight: bold;
+        letter-spacing: 1px;
+        color: #412661;
+    }
+    
+    #toStep3 {
+        margin-bottom: 2rem;
+    }
+}
+
+#step3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    
+    .section-head__title {
+        color: #6e81e2;
+    }
+    
+    #transferPhotos {
+        margin-top: 1rem;
+    }
+    
+    a[href="#step2"] {
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+}
+
+#step4 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    
+    .section-head__title {
+        color: #6e81e2;
+    }
+    
+    img.meme {
+        margin-top: 2rem;
+        margin-bottom: 2.5rem;
+        width: 200px;
+        height: 200px;
+        border-radius: 100%;
+        object-fit: cover;
+    }
 }
 
 .section-head {
@@ -139,4 +228,20 @@ body {
     &__title {
         margin: 0;
     }
+    
+    &__post {
+        color: #2e365d;
+        margin-top: .5rem;
+        margin-bottom: 0;
+        // @include text-modern;
+        font-size: 90%;
+        // font-weight: bold;
+    }
+}
+
+footer {
+    position: absolute;
+    bottom: 0px;
+    padding: 1rem;
+    // margin-top: auto;
 }
