--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -98,3 +98,38 @@
         &:last-child {margin-right: 0;}
     }
 }
+
+.input-bundle {
+    display: flex;
+    
+    .input-group {
+        margin-right: 1rem;
+        
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
+.input-group {
+    width: 100%;
+    
+    label {
+        display: flex;
+        @include text-modern;
+        margin-bottom: 0.3rem;
+        color: #6e81e2;
+        color: #5664aa;
+        font-size: 80%;
+        font-weight: bold;
+    }
+    
+    input[type="text"], input[type="number"], input[type="password"] {
+        padding: .4rem .5rem;
+        width: 100%;
+        height: 40px;
+        border: 2px solid #5664aa;
+        border-radius: 5px;    
+        font-size: 100%;
+    }
+}
