--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -2,3 +2,7 @@
     text-transform: uppercase;
     letter-spacing: 2px;
 }
+
+@mixin shadow {
+    box-shadow:0px 0px 11px -6px #00000040, 0px 12px 43px 6px #0000001a;
+}
