--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,40 +1,30 @@
 @import './mixins';
 @import './vendors';
+@import './base';
 @import './components';
 @import './typography';
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    // scroll-behavior: smooth;
-}
-
-body {
-    background-color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-    overflow: hidden;
-    scroll-behavior: smooth;
-    
-    * {font-weight: normal;}
-}
-
-a {
-    color: #6e81e2;
-}
+@import './steps';
 
 #selectDir {
     .filedrop {
         position: relative;
-        width: 50vw;
+        width: 100vw;
+        height: 100vh;
         margin-bottom: 2rem;
         
         &__overlay {
-            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
             padding: 1.5rem;
+            background-color: white;
             border-radius: 10px;
             text-align: center;
             color: #6e81e2;
+            // @include shadow;
             
             .bx {
                 display: block;
@@ -58,6 +48,7 @@ a {
             width: 100%;
             height: 100%;
             opacity: 0;
+            z-index: 2;
         }
     }
 }
@@ -65,6 +56,8 @@ a {
 #photoList {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    margin-top: -1rem;
     width: 100%;
     overflow: hidden;
     scroll-behavior: smooth;
@@ -72,9 +65,9 @@ a {
     .suggestion {
         position: relative;
         margin: 50px 15px;
-        height: auto;
+        height: fit-content;
         background-color: white;
-        box-shadow: 0px 0px 7px 3px #0000002e;
+        // box-shadow: 0px 0px 11px -6px #00000040, 0px 12px 43px 6px #0000001a;
         border-radius: 12px;
         
         &:first-child {margin-left: 34vw;}
@@ -89,11 +82,8 @@ a {
             background-color: white;
             border-radius: 100%;
             box-shadow: 0px 0px 7px 3px #0000002e;
+            font-size: 18px;
         }
-        
-        // &[data-status="unset"] {
-        //     .bx.bx-like, .bx.bx-dislike {display: none;}
-        // }
         
         &[data-status="accept"] {
             .bx.bx-like {display: block;}
@@ -116,8 +106,9 @@ a {
         }
         
         &__photo {
-            // max-width: 30vw;
-            max-height: 30vh;
+            max-width: 70vw;
+            max-height: 75px;
+            height: fit-content;
             object-fit: cover;
             border-radius: inherit;
             margin-bottom: -4px;
@@ -135,114 +126,13 @@ a {
             padding: 2rem;
             color: #412661;
             text-align: center;
+            @include shadow;
             
             h2 {
                 margin: 0;
                 margin-bottom: .5rem;
             }
         }
-    }
-}
-
-#step1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 5rem;
-    height: 100vh;
-    color: white;
-    background-color: #412661;
-    
-    #toStep2 {
-        margin-top: 2rem;
-    }
-    
-    .section-head {
-        margin-bottom: 0;
-    }
-}
-
-#step2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    // scroll-margin-top: 50vh;
-    
-    .section-head__title {
-        color: #6e81e2;
-    }
-    
-    #suggestionCounter {
-        margin-bottom: 1rem;
-        @include text-modern;
-        font-size: 80%;
-        font-weight: bold;
-        letter-spacing: 1px;
-        color: #412661;
-    }
-    
-    #toStep3 {
-        margin-bottom: 2rem;
-    }
-}
-
-#step3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    
-    .section-head__title {
-        color: #6e81e2;
-    }
-    
-    #transferPhotos {
-        margin-top: 1rem;
-    }
-    
-    .btn-group {
-        margin: 1rem 0;
-    }
-    
-    [data-sesam-target="folderRenaming"] {
-        // margin-top: 1rem;
-        max-height: 0vh;
-        overflow: hidden;
-        padding-bottom: 0rem;
-        
-        h2 {
-            margin-bottom: 0.5rem;
-        }
-        
-        &.sesam-show {
-            max-height: 100vh;
-            padding-bottom: 1rem;
-        }
-    }
-}
-
-#step4 {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    
-    .section-head__title {
-        color: #6e81e2;
-    }
-    
-    img.meme {
-        margin-top: 2rem;
-        margin-bottom: 2.5rem;
-        width: 200px;
-        height: 200px;
-        border-radius: 100%;
-        object-fit: cover;
     }
 }
 
